hopefully final edits

--- a/example.env
+++ b/example.env
@@ -39,7 +39,7 @@ fail2ban_URL=http://<server_address>/api/v1/summary/all
 # snow depth scripts probably need tweaking, haven't used in a while
 mountain1_name=a_mountain_somewhere
 mountain2_name=another_mountain
-# mountain 1 - has a scrapable page for snow depth
+# mountain 1 - has a scrapeable page for snow depth
 mountain1_URL=<skipatrol_website>
 mountain1_cond_URL=https://forecast.weather.gov/MapClick.php?lat=<x1>&lon=<y1>
 # mountain 2 - needed to use selenium to get snow depth from page
